<resources>
    <string name="app_name">MAGERR.....!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="item_one">SD</string>
    <string name="sd">SD</string>
    <string name="matematika">MATEMATIKA</string>
    <string name="bahasa_indonesia">BAHASA INDONESIA</string>
    <string name="ipa">IPA</string>
    <string name="ppkn">PPKN</string>
    <string name="ips">IPS</string>
    <string name="agama">AGAMA</string>
    <string name="penjas">PENJAS</string>
    <string name="tema">TEMA</string>
    <string name="smp">SMP</string>
    <string name="bahasa_jawa">BAHASA JAWA</string>
    <string name="membaca">Membaca</string>
    <string name="menulis">Menulis</string>
    <string name="menggambar">Menggambar</string>
    <string name="sma">SMA</string>
    <string name="selected_item">selected_item</string>
    <string name="register">REGISTER</string>


    <string-array name="Kelas_SD">
        <item>Kelas 1</item>
        <item>Kelas 2</item>
        <item>Kelas 3</item>
        <item>Kelas 4</item>
        <item>Kelas 5</item>
        <item>Kelas 6</item>
    </string-array>
    <string-array name="Kelas_SMA">
        <item>Kelas 1</item>
        <item>Kelas 2</item>
        <item>Kelas 3</item>
    </string-array>

    <string-array name="Kelas_SMP">
        <item>Kelas 1</item>
        <item>Kelas 2</item>
        <item>Kelas 3</item>

    </string-array>


</resources>
