<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="100dp">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/wijed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"/>


        <TextView
            android:id="@+id/bounds"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_alignParentLeft="true"
            android:text="TK"
            android:textSize="20dp"

            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="683dp"
            android:background="@drawable/bounds" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_menggambar_tk"
            android:layout_width="170dp"
            android:layout_height="59dp"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"

            android:text="@string/menggambar">

        </Button>

        <Button
            android:id="@+id/btn_menulis_tk"
            android:layout_width="170dp"
            android:layout_height="59dp"

            android:layout_marginLeft="49dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"

            android:text="@string/menulis">

        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_membaca_tk"
            android:layout_width="170dp"
            android:layout_height="59dp"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"

            android:text="@string/membaca">

        </Button>

        <Button
            android:id="@+id/btn_mennyanyi_tk"
            android:layout_width="170dp"
            android:layout_height="59dp"

            android:layout_marginLeft="49dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"

            android:text="Menyanyi">

        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal"/>

</LinearLayout>

